Add compiler sub-project