@@ -1,61 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
-   <groupId>com.vanillasource.oscar</groupId>
-   <artifactId>oscar-language</artifactId>
+   <artifactId>oscar-runtime</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
-   <name>Oscar Language</name>
-   <description>Language Compiler</description>
+   <name>Oscar Language Runtime</name>
+   <description>Executes compiled Oscar binaries.</description>
+
+   <parent>
+      <groupId>com.vanillasource.oscar</groupId>
+      <artifactId>oscar</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+   </parent>
 
    <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <graalvm.version>22.1.0</graalvm.version>
    </properties>
-
-   <build>
-      <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.0</version>
-            <configuration>
-               <source>17</source>
-               <target>17</target>
-               <compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M6</version>
-            <configuration>
-               <argLine>
-                  --add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED
-                  --add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
-                  --add-exports org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED
-               </argLine>
-            </configuration>
-            <executions>
-               <execution>
-                  <id>surefire-test</id>
-                  <phase>test</phase>
-                  <goals>
-                     <goal>test</goal>
-                  </goals>
-                  <configuration>
-                     <includes>
-                        <include>**/*Tests.java</include>
-                     </includes>
-                     <parallel>tests</parallel>
-                     <threadCount>1</threadCount>
-                     <skip>false</skip>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-      </plugins>
-   </build>
 
    <dependencies>
       <dependency>
@@ -67,19 +27,6 @@
          <groupId>org.graalvm.truffle</groupId>
          <artifactId>truffle-dsl-processor</artifactId>
          <version>${graalvm.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.testng</groupId>
-         <artifactId>testng</artifactId>
-         <version>7.1.0</version>
-         <type>jar</type>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.mockito</groupId>
-         <artifactId>mockito-all</artifactId>
-         <version>1.9.5</version>
-         <scope>test</scope>
       </dependency>
    </dependencies>
 </project>
